--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -22,7 +22,7 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
-   mkdir /mnt/shell/emulated 0700 shell shell
+    mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage/emulated 0555 root root
     mkdir /storage/sdcard1 0775 system system
     mkdir /storage/usbdisk 0775 system system
@@ -37,6 +37,7 @@ on init
     symlink /storage/emulated/legacy /mnt/sdcard
     symlink /storage/emulated/legacy /storage/sdcard0
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
+    #usbdisk is not enabled yet
     symlink /storage/usbdisk /usbdisk
     symlink /storage/usbdisk /mnt/usbdisk
 
