add part 1 one of usbdisk (OTG)

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -39,7 +39,9 @@ on init
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
     symlink /storage/sdcard1 /ext_card
     symlink /storage/sdcard1 /mnt/ext_card
-
+    #usbdisk is not enabled yet but will fix soon
+    symlink /storage/usbdisk /usbdisk
+    symlink /storage/usbdisk /mnt/usbdisk
     symlink /dev/socket /tmp
 
     mkdir /dev/bus 0755 root root
