huashan: add secchand
Change-Id: I5e3891608882d20cd2d4559892566210e936aad8

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -444,6 +444,11 @@ service updatemiscta /system/bin/updatemiscta
     user root
     oneshot
 
+service secchand /system/bin/secchand
+    class core
+    group root
+    user root
+
 service netmgrd /system/bin/netmgrd
     class main
 
