Add virtual sdcard service for internal storage

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -520,6 +520,10 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  2
 
+# virtual sdcard daemon running as media_rw (1023)
+service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
+    class late_start
+
 service thermald /system/bin/thermald -c /system/etc/thermald.conf
     class main
     socket thermald stream 0666 root root
