--- a/rootdir/init.device.rc
+++ b/rootdir/init.device.rc
@@ -1,3 +1,23 @@
+on early-boot
+    # Permissions for LSM330D sensor
+    chown system system /sys/devices/i2c-12/12-0019/pollrate_ms
+    chmod 0664 /sys/devices/i2c-12/12-0019/pollrate_ms
+    chown system system /sys/devices/i2c-12/12-0019/power/autosuspend_delay_ms
+    chmod 0664 /sys/devices/i2c-12/12-0019/power/autosuspend_delay_ms
+    chown system system /sys/devices/i2c-12/12-006b/pollrate_ms
+    chmod 0664 /sys/devices/i2c-12/12-006b/pollrate_ms
+    chown system system /sys/devices/i2c-12/12-006b/range
+    chmod 0664 /sys/devices/i2c-12/12-006b/range
+    
+    # AS3677/Ambient Light Sensor
+    chown system system /sys/devices/i2c-10/10-0040/als_on
+    
+    # Permission for touch glove mode
+    chown system system /sys/devices/i2c-3/3-0024/main_ttsp_core.cyttsp4_i2c_adapter/signal_disparity
+    chmod 0664 /sys/devices/i2c-3/3-0024/main_ttsp_core.cyttsp4_i2c_adapter/signal_disparity
+    chown system system /sys/devices/i2c-3/3-0024/main_ttsp_core.cyttsp4_i2c_adapter/finger_threshold
+    chmod 0664 /sys/devices/i2c-3/3-0024/main_ttsp_core.cyttsp4_i2c_adapter/finger_threshold
+
 on boot
     # Owner for the proximity sensor
     chown system system /sys/devices/i2c-12/12-0054/threshold
