huashan: Add irsc_util service and sec_config file
Change-Id: I4e0623e3246ac29d2f806928fe346876670db74a

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -230,6 +230,11 @@ on post-fs-data
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
 
+service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
+    class main
+    user root
+    oneshot
+
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
