--- a/rootdir/init.sony.rc
+++ b/rootdir/init.sony.rc
@@ -1,13 +1,5 @@
 import init.sony-platform.rc
-
-# Fast Dormancy
-service fast-dormancy /system/bin/fast-dormancy
-    user root
-    group root inet net_raw net_admin
-    class main
-
-on property:ro.semc.enable.fast_dormancy=false
-    stop fast-dormancy
+import init.sony.usb.rc
 
 service secchan /system/bin/secchand
     user root
