--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -129,4 +129,15 @@ service qseecomd /system/bin/qseecomd
     user system
     group system
 
+service time_daemon /system/bin/time_daemon
+    class late_start
+    user root
+    group root
+
+service wcnss-service /system/bin/wcnss_service
+    class late_start
+    user system
+    group system wifi
+    oneshot
+
 import init.sony.rc
