huashan: add time and wifi services
Change-Id: I4b2427bedf4dd226d3c49c3c06000767f3497668

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -217,6 +217,9 @@ on post-fs-data
     #Create directories for gpsone_daemon services
     mkdir /data/misc/gpsone_d 0770 system gps
 
+    # Create /data/time folder for time-services
+    mkdir /data/time/ 0700 system system
+
     mkdir /data/audio/ 0770 media audio
 
     setprop vold.post_fs_data_done 1
