--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -100,6 +100,12 @@ on post-fs-data
     mkdir /tombstones/mdm 0771 system system
     mkdir /tombstones/mdm2 0771 system system
 
+#start GNSS/Sensor interface daemon
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user system
+    group gps qcom_oncrpc net_raw
+
 service thermald /system/bin/thermald
    class main
    user root
