--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -66,15 +66,19 @@ mkdir /data/camera 0771 root camera
 on boot
 
     # LM3560/cameralight
-    chown system system /sys/devices/i2c-10/10-0053/torch_enable
-    chown system system /sys/devices/i2c-10/10-0053/torch_current
+    chown system camera /sys/devices/i2c-10/10-0053/torch_enable
+    chmod 660 /sys/devices/i2c-10/10-0053/torch_enable
+    chown system camera /sys/devices/i2c-10/10-0053/torch_current
+    chmod 660 /sys/devices/i2c-10/10-0053/torch_current
     chown system system /sys/devices/i2c-10/10-0053/privacy_enable
     chown system system /sys/devices/i2c-10/10-0053/privacy_current
-    chown system system /sys/devices/i2c-10/10-0053/flash_enable
-    chown system system /sys/devices/i2c-10/10-0053/flash_duration
-    chown system system /sys/devices/i2c-10/10-0053/flash_synchronization
-    chown system system /sys/devices/i2c-10/10-0053/flash_current
-    chown system system /sys/devices/i2c-10/10-0053/status
+    chown system camera /sys/devices/i2c-10/10-0053/flash_enable
+    chown system camera /sys/devices/i2c-10/10-0053/flash_duration
+    chown system camera /sys/devices/i2c-10/10-0053/flash_synchronization
+    chmod 660 /sys/devices/i2c-10/10-0053/flash_synchronization
+    chown system camera /sys/devices/i2c-10/10-0053/flash_current
+    chmod 660 /sys/devices/i2c-10/10-0053/flash_current
+    chown system camera /sys/devices/i2c-10/10-0053/status
 
     # AS3676/Ambient Light Sensor/Owner for the light sensor
     chown system system /sys/devices/i2c-10/10-0040/als_on
