huashan: init: start qseecomd as root
qseecomd communicates with the secure domain via rpmb
needed for widevine anti rollback feature.

Bug: 15777869

Change-Id: I6f7066258d409b9e6d447ae17bf50200323fa670

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -117,6 +117,6 @@ on post-fs-data
     rm /data/local/tmp/adreno_config.txt
 
 service qseecomd /system/bin/qseecomd
-    class late_start
-    user system
-    group system
+    class core
+    user root
+    group root
