--- a/rootdir/system/etc/firmware/wlan/prima/WCNSS_qcom_cfg.ini
+++ b/rootdir/system/etc/firmware/wlan/prima/WCNSS_qcom_cfg.ini
@@ -109,6 +109,11 @@ gEnableApProt=1
 
 gEnableApOBSSProt=1
 
+#Enable TrafficMonitor
+gEnableTrafficMonitor=1
+
+#Set TracfficIdleTimeout
+gTrafficIdleTimeout=3000
 
 #Enable/Disable UAPSD for SoftAP
 
@@ -182,6 +187,9 @@ RoamRssiDiff=3
 # NOTE: Value of 0 means that we would register for reassoc threshold.
 gImmediateRoamRssiDiff=10
 
+# To enable, set gRoamIntraBand=1 (Roaming within band)
+# To disable, set gRoamIntraBand=0 (Roaming across band)
+gRoamIntraBand=0
 # SAP Country code
 
 # Default Country Code is 2 bytes, 3rd byte is optional indoor or out door.
@@ -371,6 +379,34 @@ isAndroidPsEn=0
 
 #disable LDPC in STA mode if the AP is TXBF capable
 gDisableLDPCWithTxbfAP=1
+#Enable thermal mitigation
+gThermalMitigationEnable=1
+
+#List of Country codes for which 11ac needs to be disabled
+#Each country code must be delimited by comma(,)
+gListOfNon11acCountryCode=RU,UA,ZA
+
+#Maxium Channel time in msec
+gMaxMediumTime = 6000
+
+# 802.11K support
+gRrmEnable=1
+gRrmOperChanMax=8
+gRrmNonOperChanMax=8
+gRrmRandIntvl=100
+
+# If set to 1, generate the p2p device address from primary mac address
+# with the locally administered bit set
+isP2pDeviceAddrAdministrated=1
+
+#Enable Telescopic Beacon wakeup
+gEnableDynamicDTIM=0
+gIgnoreDtim=0
+gTelescopicBeaconWakeupEn=1
+telescopicBeaconTransListenInterval=2
+telescopicBeaconTransListenIntervalNumIdleBcns=10
+telescopicBeaconMaxListenInterval=3
+telescopicBeaconMaxListenIntervalNumIdleBcns=15
 END
 
 # Note: Configuration parser would not read anything past the END marker
