--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -22,6 +22,7 @@ on early-init
     symlink /data/tombstones /tombstones
     write /sys/block/mmcblk0/queue/read_ahead_kb 2048
     write /sys/block/mmcblk1/queue/read_ahead_kb 2048
+    write /sys/block/mmcblk0/queue/scheduler noop
 
 
 on init
@@ -597,3 +598,6 @@ on property:sys.perf.profile=2
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "performance"
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "performance"
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/pwrscale/policy "msm"
+
+on property:sys.boot_completed=1
+    write /sys/block/mmcblk0/queue/scheduler row
