--- a/project.config
+++ b/project.config
@@ -3,3 +3,9 @@
 	inheritFrom = CyanogenMod/android_device_sony_fuji-common
 [submit]
 	action = rebase if necessary
+[access "refs/heads/*"]
+	create = group Brinly
+	push = group Brinly
+	label-Code-Review = -2..+2 group Brinly
+	label-Verified = -1..+1 group Brinly
+	submit = group Brinly
