Rename group Brinly to Brinly(huashan)

--- a/project.config
+++ b/project.config
@@ -4,8 +4,8 @@
 [submit]
 	action = rebase if necessary
 [access "refs/heads/*"]
-	create = group Brinly
-	push = group Brinly
-	label-Code-Review = -2..+2 group Brinly
-	label-Verified = -1..+1 group Brinly
-	submit = group Brinly
+	create = group Brinly(huashan)
+	push = group Brinly(huashan)
+	label-Code-Review = -2..+2 group Brinly(huashan)
+	label-Verified = -1..+1 group Brinly(huashan)
+	submit = group Brinly(huashan)
