Rename group Brinly(huashan) to Xperia SP maintainers.

--- a/project.config
+++ b/project.config
@@ -4,8 +4,8 @@
 [submit]
 	action = rebase if necessary
 [access "refs/heads/*"]
-	create = group Brinly(huashan)
-	push = group Brinly(huashan)
-	label-Code-Review = -2..+2 group Brinly(huashan)
-	label-Verified = -1..+1 group Brinly(huashan)
-	submit = group Brinly(huashan)
+	create = group Xperia SP maintainers.
+	push = group Xperia SP maintainers.
+	label-Code-Review = -2..+2 group Xperia SP maintainers.
+	label-Verified = -1..+1 group Xperia SP maintainers.
+	submit = group Xperia SP maintainers.
