--- a/project.config
+++ b/project.config
@@ -4,8 +4,8 @@
 [submit]
 	action = rebase if necessary
 [access "refs/heads/*"]
-	create = group Xperia SP maintainers.
-	push = group Xperia SP maintainers.
-	label-Code-Review = -2..+2 group Xperia SP maintainers.
-	label-Verified = -1..+1 group Xperia SP maintainers.
-	submit = group Xperia SP maintainers.
+	create = group Sony Xperia SP maintainers.
+	push = group Sony Xperia SP maintainers.
+	label-Code-Review = -2..+2 group Sony Xperia SP maintainers.
+	label-Verified = -1..+1 group Sony Xperia SP maintainers.
+	submit = group Sony Xperia SP maintainers.
