--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -22,7 +22,6 @@ on early-init
     symlink /data/tombstones /tombstones
     write /sys/block/mmcblk0/queue/read_ahead_kb 512
     write /sys/block/mmcblk1/queue/read_ahead_kb 512
-    write /sys/fs/selinux/enforce 0
 
 on init
     mkdir /mnt/shell/emulated 0700 shell shell
@@ -99,6 +98,9 @@ on early-boot
     write /sys/module/pm8921_charger/parameters/enable_lowbatt_detect 1
 
 on boot
+    # TEMPORARY: set selinux permissive
+    write /sys/fs/selinux/enforce 0
+
     exec /system/bin/btnvtool -O
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
