huashan:permissive selinux and fixup bluetooth
Change-Id: If9383e0aad9dea02220681dec45bfbb36e601174

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -22,6 +22,7 @@ on early-init
     symlink /data/tombstones /tombstones
     write /sys/block/mmcblk0/queue/read_ahead_kb 512
     write /sys/block/mmcblk1/queue/read_ahead_kb 512
+	write /sys/fs/selinux/enforce 0
 
 on init
     mkdir /mnt/shell/emulated 0700 shell shell
@@ -119,7 +120,7 @@ on boot
     chmod 2770 /dev/socket/qmux_radio
     mkdir /dev/socket/qmux_audio 0770 media audio
     chmod 2770 /dev/socket/qmux_audio
-    mkdir /dev/socket/qmux_bluetooth 0770 bluetooth net_bt_stack
+    mkdir /dev/socket/qmux_bluetooth 0770 bluetooth bluetooth
     chmod 2770 /dev/socket/qmux_bluetooth
     mkdir /dev/socket/qmux_gps 0770 gps gps
     chmod 2770 /dev/socket/qmux_gps
