huashan: egl: add legacy paths
add support for legacy adreno libs

Change-Id: I092a2dcfdcf05c2ea9f91109b6ac055f879014b9
Signed-off-by: Alin Jerpelea <alin.jerpelea@sonymobile.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -27,6 +27,9 @@ on init
 
     symlink /dev/socket /tmp
 
+    # Support legacy libs
+    symlink /system/vendor/lib/egl /egl
+
     mkdir /dev/bus 0755 root root
     mkdir /dev/bus/usb 0755 root root
 
