huashan: tad: Properly point to specific TA partition
Pointing to the entire MMC is a sepolicy no no.

Change-Id: Ib569b22e11f8baa5d74ed0fe66a231ff22ab1be2

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -280,7 +280,7 @@ on property:init.svc.wpa_supplicant=stopped
 
 # SONY: TrimArea Daemon
 # Last 2 args: start block(blk size 128k), number of blocks(partitionsize(kb)/128(kb))
-service tad_static /sbin/tad_static /dev/block/mmcblk0 1,16
+service tad_static /sbin/tad_static /dev/block/platform/msm_sdcc.1/by-name/TA 0,16
     user root
     group root
     socket tad stream 0660 system system
