huashan : Open Source Thermal Manager

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -513,11 +513,15 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -w 1023 /mnt/media_rw/us
     class late_start
     disabled
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+service thermanager /system/bin/thermanager /system/etc/thermanager.xml
     class main
     user root
     group root
-    disabled
+	
+service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+    class main
+    user root
+    group root system
 
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     class late_start
@@ -535,12 +539,6 @@ service illumination /system/bin/illumination_service
 service ta_qmi_service /system/bin/ta_qmi_service
     user root
     disabled
-
-# Start system_monitor
-service system_monitor /system/bin/system_monitor
-    socket sysmon stream 0660 root system
-    class core
-    user root
 
 service rmt_storage /system/bin/rmt_storage
     class core
