huashan : Update Offline Charge

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -89,12 +89,6 @@ on early-boot
     # Permissions for AKM8963 sensor
     chown system system /data/misc/akm_set.txt
 
-    write /sys/devices/platform/msm_hsic_host/override_wakelock 0
-    write /sys/module/pm8921_charger/parameters/eoc_bat_fet_close 1
-    # Start the offline charging (This blocks booting further in some cases)
-    exec /system/bin/chargemon
-    write /sys/module/pm8921_charger/parameters/eoc_bat_fet_close 0
-    write /sys/devices/platform/msm_hsic_host/override_wakelock 1
     write /sys/module/pm8921_charger/parameters/enable_lowbatt_detect 1
 
 on boot
@@ -571,6 +565,11 @@ service setup_fs /system/bin/setup_fs /dev/block/platform/msm_sdcc.1/by-name/Use
     user root
     group root
     oneshot
+
+# healthd
+service charger /sbin/healthd -c
+    class charger
+    seclabel u:r:healthd:s0
 
 on property:sys.perf.profile=0
     start mpdecision
