huashan: Update rmt_storage
Change-Id: I6039754143b21a08f33ed26310f925fb44a4e2af
Signed-off-by: Mrcl1450 <marcelo-fil@outlook.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -545,6 +545,7 @@ service system_monitor /system/bin/system_monitor
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
+    group system
 
 service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
     class main
